--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -51,13 +51,48 @@ h1{
   font: size 1.8rem;
   padding: 1 rem 0;
 }
-h2:hover{
-  color:aqua;
-}
 h2{
   color:#45CE63;
   font-size: 2.7rem;
   padding: 0rem 0;
+}
+h2:hover{
+  color:aqua;
+}
+ul{
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+li{
+  margin-top: 1rem;
+}
+input, 
+select, 
+textarea,
+button{
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem #a4a4a4 solid;
+  font-family: Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+button {
+  background-color:  #f8f8f8;
+  cursor: pointer;
+}
+input:hover, 
+select:hover, 
+textarea:hover,
+button:hover{
+  border:  0.1rem #6345ce solid;
+}
+button.primary{
+  background-color:  #f0c040;
+}
+button.block{
+  width: 100%;
 }
 a{
   text-decoration: none;
@@ -78,12 +113,24 @@ a.brand{
 .row.center{
   justify-content: center;
 }
+.row.top{
+  align-items: flex-start;
+}
+.col-1{
+  flex: 1 1 25rem;
+}
+.col-2{
+  flex: 2 1 50rem;
+}
 /* Images */
 img{
   border-radius: 0.5rem;
 }
 img.medium {
   max-width: 29rem;
+  width: 100%;
+}
+img.large{
   width: 100%;
 }
 /* Card */
@@ -101,7 +148,7 @@ img.medium {
 }
 .price{
   font-size: 2.0rem;
-  font-weight: bold;
+  font-weight: 200;
 }
 /* Rating */
 .rating span{
@@ -113,4 +160,23 @@ img.medium {
   color: #404040;
   font-weight: bold;
 }
-
+/* Alert */
+.success{
+  color: #20a020;
+}
+.danger{
+  color: #a02020;
+}
+.alert{
+  padding: 1rem;
+  border: 0.1rem solid transparent;
+  border-radius:  0.5rem;
+}
+.alert-info{
+  color:  #2020a0;
+  background-color:  #e0e0ff;
+}
+.alert-danger{
+  color:  #a02020;
+  background-color:  #ffe0e0;
+}
