--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -110,6 +110,14 @@ a.brand{
   font-size: 3rem;
   font-weight: bold;
 }
+.badge{
+  background-color: #ff007f;
+  color: #ffffff;
+  border-radius: 50%;
+  padding:  0.2rem 0.7rem;
+  font-size:  1.8rem;
+  margin-left: 0.2rem;
+}
 .row.center{
   justify-content: center;
 }
@@ -122,9 +130,16 @@ a.brand{
 .col-2{
   flex: 2 1 50rem;
 }
+.min-30{
+  min-width: 30rem;
+}
 /* Images */
 img{
   border-radius: 0.5rem;
+}
+img.small{
+  max-width: 5rem;
+  width: 100%;
 }
 img.medium {
   max-width: 29rem;
