--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -61,6 +61,12 @@ h3{
   font-size: 2.7rem;
   padding: 0rem 0;
 }
+h4{
+  text-align: center;
+  font-size: 2.7rem;
+  padding:  0rem 0;
+  background-color: skyblue;
+}
 h3:hover{
   color:aqua;
 }
@@ -132,14 +138,59 @@ a.brand{
 .row.top{
   align-items: flex-start;
 }
+.row.start{
+  justify-content: flex-start;
+}
 .col-1{
   flex: 1 1 25rem;
 }
 .col-2{
   flex: 2 1 50rem;
 }
+.col-3{
+  flex: 3 1 75rem;
+}
 .min-30{
   min-width: 30rem;
+}
+.p-1 {
+  padding:  1rem;
+}
+/* Aside */
+aside {
+  position:  fixed;
+  width:  30rem;
+  height:  100%;
+  background-color:  #efefef;
+  z-index:  1000;
+  transform: translateX(-30rem);
+  transition:  all 0.5s;
+}
+aside.open{
+  transform:  translateX(0);
+}
+button.open-sidebar{
+  font-size:  3rem;
+  padding:  0.2rem 0.5rem;
+  margin:  0 0.5rem;
+  background:  none;
+  color:  #ffffff;
+  cursor:  pointer;
+}
+button.open-sidebar:hover{
+  border-color:  #ffffff;
+}
+aside ul{
+  padding:  0;
+  list-style:  none;
+}
+aside li{
+  display:  flex;
+  justify-content:  space-between;
+  padding:  1rem;
+}
+button.close-sidebar{
+  padding:  0.3rem 0.8rem;
 }
 /* Images */
 img{
@@ -181,7 +232,6 @@ img.large{
 }
 .rating span:last-child{
   color: #404040;
-  font-weight: bold;
 }
 /* Alert */
 .loading {
@@ -271,4 +321,23 @@ img.large{
 }
 .table button {
   margin:  0 0.2rem;
+}
+/* Carousel */
+.carousel .slide img {
+  max-width:  30rem;
+}
+
+/* Search */
+.search button {
+  border-radius: 0 0.5rem 0.5rem 0;
+  border_right:  none;
+  margin-right:  0.5rem;
+}
+.search input {
+  border-radius:  0.5rem 0 0 0.5rem;
+  border_right:  none;
+  margin-left:  0.5rem;
+}
+.active {
+  font-weight: bold;
 }
